# burnctl

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  SKILL.md  pyproject.toml
.github/workflows/: build-deb.yml  ci.yml
burnctl/: __init__.py  __main__.py  cli.py  config.py  openrouter_ledger.py  openrouter_proxy.py  openrouter_setup.py  pricing.py  report.py
burnctl/collectors/: __init__.py  aider.py  api_usage.py  base.py  claude.py  codex.py  gemini.py  local.py  stubs.py
burnctl/man/: burnctl.1
scripts/: build-deb.sh  generate-repo-map.py
tests/: test_cli.py  test_collector_impls.py  test_collectors.py  test_config.py  test_daily_activity_adversarial.py  test_edge_cases.py  test_integration.py  test_openrouter_proxy.py  test_openrouter_setup.py  test_pricing.py  test_report.py  test_snapshots.py
tests/snapshots/: render_accessible.txt  render_compact.txt  render_full_multi.txt  render_full_simple.txt  render_full_single.txt  render_json.txt
